<resources>
    <string name="app_name">Chatify</string>
    <string name="whatsapp">WhatsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="new_group">New group</string>
    <string name="setting">setting</string>
    <string name="name">Name</string>
    <string name="message">message</string>
    <string name="hey_how_are_you">Hey! How are you?</string>
    <string name="contact_name">Contact Name</string>
    <string name="_10_30_am">10:30 AM</string>
    <string name="my_status">My Status</string>
    <string name="tap_to_add_status_update">Tap to add status update</string>
    <string name="welcome_to_chatify">Welcome to Chatify</string>
    <string name="read_our_privacy_policy_tap_and_continue_to_accept_the_terms_of_service">Read our Privacy Policy Tap and continue to accept the Terms of Service</string>
    <string name="agree_and_continue">Agree and continue</string>
    <string name="from">from</string>
    <string name="f_a_c_e_b_o_o_k">F A C E B O O K</string>
    <string name="enter_your_email_and_password_to_log_in">Enter Your email and password to log in.</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">sign in</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="not_registerd_yet_sign_up">Not Registerd yet, Sign up</string>
    <string name="please_sign_up_first">------ Please Sign Up First ------</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="chatify_will_send_an_link_to_verify_your_email">chatify will send an link to verify your email</string>
    <string name="verify">Verify</string>
    <string name="resend_verification_email">Resend Verification Email</string>
    <string name="chatify">Chatify</string>
    <string name="_91">91</string>
    <string name="enter_your_number">Enter Your Number</string>
    <string name="next">Next</string>
    <string name="bio">Bio</string>
    <string name="account">Account</string>
    <string name="security_notifications_change_number">Security notifications, change number</string>
    <string name="privacy">Privacy</string>
    <string name="block_contact_disappearing_messages">Block contact, disappearing messages</string>
    <string name="language">Language</string>
    <string name="english_device_s_language">English (device\'s language)</string>
    <string name="help">Help</string>
    <string name="help_center_contact_us_privacy_policy">help center, contact us, privacy policy</string>
    <string name="hint">Name</string>
    <string name="text_should_be_changed_this_name_will_visible_to_your_chatify_contact">Text Should be changed, This name will visible to your Chatify Contact</string>
    <string name="about">About</string>
    <string name="i_m_a_chatify_user">I\'m a Chatify User</string>
    <string name="phone">Phone</string>
    <string name="_1234567890">1234567890</string>
    <string name="email">Email</string>
    <string name="sign_out">sign out</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_bio">Enter Your Bio</string>
    <string name="profile_image">Profile Image</string>
    <string name="new_contact">New Contact</string>
    <string name="new_contacts">New Contact</string>
    <string name="contact_on_chatify">Contact on Chatify</string>
    <string name="invite_friends">Invite friends</string>
    <string name="contact">Contact</string>
    <string name="documents">Documents</string>
    <string name="audio">Audio</string>
    <string name="location">Location</string>
    <string name="contacts">Contact</string>
    <string name="type_a_message">Type a message</string>
    <string name="last_seen_today">last seen today...</string>
    <string name="this_is_text_message">this is text message</string>
    <string name="this_is_text">This is Text !!</string>
    <string name="back">Back</string>
    <string name="none_of_your_contact_are_using_chatify_use_the_button_below_to_invite_them_to_chatify">None of your contact are using Chatify. Use the button below to invite them to Chatify.</string>
    <string name="chat_with_your_friends_who_use_chatify">Chat with Your friends who use Chatify</string>
    <string name="mute_notification">Mute notification</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="media_visibility">Media visibility</string>
    <string name="messages_and_calls_are_end_to_end_encrypted_tap_to_verify">Messages and calls are end-to-end encrypted. Tap to verify.</string>
    <string name="about_and_phone_number">About and phone number</string>
    <string name="description">Description..</string>
    <string name="_7_july_2024">7 July 2024</string>
    <string name="_91_xxxxxxxxxx">+91 xxxxxxxxxx</string>
    <string name="send_image">Send Image</string>
    <string name="play_voice">Play Voice</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="add_caption">Add caption</string>
    <string name="time">Time</string>
    <string name="username">username</string>
    <string name="name2">Name</string>
    <string name="upload_photo">Upload Status</string>
    <string name="viewed_by_0">Viewed by 0</string>
    <string name="no_view_yet">No view yet</string>
    <string name="_0">0</string>
    <string name="status_caption_here">Status caption here</string>
    <string name="status_image">Status Image</string>
    <string name="_10_mins_ago">10 mins ago</string>
    <string name="_10">10</string>
</resources>