<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/search"
        app:iconTint="?attr/colorOnPrimary"
        app:titleTextColor="?attr/colorOnPrimary" />

    <group android:id="@+id/action_more">

        <item
            android:id="@+id/action_new_group"
            app:showAsAction="never"
            android:title="@string/new_group"
            app:titleTextColor="?attr/colorOnPrimary" />

        <item
            android:id="@+id/action_settings"
            app:showAsAction="never"
            android:title="@string/setting"
            app:titleTextColor="?attr/colorOnPrimary" />

    </group>
</menu>
