<?xml version="1.0" encoding="utf-8"?>
<layout>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.chat">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <LinearLayout
            android:id="@+id/in_Invite"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Invite Friends"
                android:textColor="@color/black"
                android:textSize="25sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/none_of_your_contact_are_using_chatify_use_the_button_below_to_invite_them_to_chatify" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="30dp"
                android:text="@string/invite_friends"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:text="@string/chat_with_your_friends_who_use_chatify" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>
</layout>
